--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,11 @@
 @tailwind utilities;
 
 @layer components {
-  .router-link-active.router-link-exact-active {
+  div.space-x-7 .router-link-active.router-link-exact-active {
     @apply bg-gray-50 rounded-lg px-3 py-2;
+  }
+  ul li .router-link-active.router-link-exact-active {
+    @apply text-opacity-100 font-medium;
   }
   td,
   th {
